--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "md5": "^2.2.1",
-    "seedrandom": "^3.0.5"
+    "blueimp-md5": "^2.12.0",
+    "seed-random": "^2.2.0"
   }
 }
