Add deploy script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "rm -r ./dist/ && parcel build inject-briefkasten-regulated.js -o inject-briefkasten.${npm_package_version}.js"
+    "build": "rm -r ./dist/ && parcel build inject-briefkasten-regulated.js -o inject-briefkasten.${npm_package_version}.js",
+    "deploy": "scp ./dist/* martin@live1.zeit.de:/var/www/live.zeit.de/interactive/briefkasten.cached/ && scp ./dist/* martin@live2.zeit.de:/var/www/live.zeit.de/interactive/briefkasten.cached/"
   },
   "keywords": [],
   "author": "",
